<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="80dp"
            android:fillViewport="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp">
                <nhutlm.lamodafashion.ui.promotion.verticalviewpager.VerticalViewPager
                    android:id="@+id/thumbnails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </nhutlm.lamodafashion.ui.promotion.verticalviewpager.VerticalViewPager>
                <LinearLayout
                    android:id="@+id/layoutDots"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/dots_margin_bottom"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"></LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/category_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_text"
                        android:textColor="@color/dot_light_screen"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/market_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/market_text"
                        android:textColor="@color/dot_light_screen"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/market"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/price_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_text"
                        android:textColor="@color/dot_light_screen"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/product_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_text"
                android:textColor="@color/dot_light_screen"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"/>
            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_text"
                android:textSize="13sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_gradient"/>
        </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/abc"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_tab">
                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/favor"
                    android:layout_centerInParent="true"
                    android:background="@color/background_tab"/>
            </RelativeLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/buy_now"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:background="@color/dot_light_screen"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_above="@id/abc"
            android:src="@drawable/bg_gradient"/>
    </RelativeLayout>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp"
        >

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/home"
                   android:layout_alignParentLeft="true"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/shopping"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>